--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,57 @@
-# Prerequisites
-*.d
+# --- General ---
+*.log
+*.tmp
+*.bak
+*.swp
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
+# --- C++ Build Artifacts ---
 *.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
+*.o
 *.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
 *.a
 *.lib
-
-# Executables
+*.dll
 *.exe
 *.out
-*.app
+*.pdb
+*.idb
 
-# debug information files
-*.dwo
+# --- Visual Studio ---
+.vs/
+*.vcxproj.user
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# --- Build Directories ---
+x64/
+x86/
+Debug/
+Release/
+ipch/
+build/
+bin/
+out/
+
+# --- CMake (if used) ---
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+
+# --- vcpkg ---
+vcpkg_installed/
+vcpkg_buildtrees/
+vcpkg_downloads/
+vcpkg_out/
+
+# --- Raylib (if included manually) ---
+raylib/build/
+
+# --- Misc ---
+.DS_Store
+Thumbs.db
+
+# Optional: ignore local settings
+*.vcxproj.user
