--- a/tetris_clone/tetris_clone.vcxproj
+++ b/tetris_clone/tetris_clone.vcxproj
@@ -127,18 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Colors.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Position.cpp" />
     <ClCompile Include="tetris_clone.cpp" />
     <ClCompile Include="Tetromino.cpp" />
+    <ClCompile Include="Tetrominos.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Colors.hpp" />
     <ClInclude Include="Constants.hpp" />
     <ClInclude Include="Game.hpp" />
     <ClInclude Include="Grid.hpp" />
     <ClInclude Include="Input.hpp" />
+    <ClInclude Include="Position.hpp" />
     <ClInclude Include="Tetromino.hpp" />
     <ClInclude Include="UI.hpp" />
   </ItemGroup>
